datadir = ${datarootdir}/freeon/BasisSets
data_DATA = $(BasisSets)

EXTRA_DIST = $(data_DATA)

BasisSets = \
  3-21G-SPLIT.bas \
  3-21G.bas \
  3-21G.bas-SPLIT \
  3-21GSP-SPLIT.bas \
  3-21GSP.bas \
  3-21Gs-SPLIT.bas \
  3-21Gs.bas \
  4-22GSP-SPLIT.bas \
  4-22GSP.bas \
  4-31Gs-SPLIT.bas \
  4-31Gs.bas \
  6-311G-SPLIT.bas \
  6-311G.bas \
  6-311G3df,3pd-SPLIT.bas \
  6-311G3df,3pd.bas \
  6-311Gss-SPLIT.bas \
  6-311Gss.bas \
  6-311ppG3df,3pd-SPLIT.bas \
  6-311ppG3df,3pd.bas \
  6-31G-SPLIT.bas \
  6-31G.bas \
  6-31Gs-SPLIT.bas \
  6-31Gs.bas \
  6-31Gss-SPLIT.bas \
  6-31Gss.bas \
  6-31Gss.bas-SPLIT \
  6-31ppGss-SPLIT.bas \
  6-31ppGss.bas \
  Ahlrichs_TZV-SPLIT.bas \
  Ahlrichs_TZV.bas \
  Ahlrichs_VDZ-SPLIT.bas \
  Ahlrichs_VDZ.bas \
  Ahlrichs_VTZ-SPLIT.bas \
  Ahlrichs_VTZ.bas \
  Ahlrichs_pVDZ-SPLIT.bas \
  Ahlrichs_pVDZ.bas \
  CRENBL_ECP-SPLIT.bas \
  CRENBL_ECP.bas \
  CRENBS_ECP-SPLIT.bas \
  CRENBS_ECP.bas \
  C_C98-SPLIT.bas \
  C_C98.bas \
  Crystal98-SPLIT.bas \
  Crystal98.bas \
  DunningHay_SV-SPLIT.bas \
  DunningHay_SV.bas \
  DunningHay_SVP-SPLIT.bas \
  DunningHay_SVP.bas \
  Dunning_DZ-SPLIT.bas \
  Dunning_DZ.bas \
  Dunning_DZP-SPLIT.bas \
  Dunning_DZP.bas \
  Dunning_TZ-SPLIT.bas \
  Dunning_TZ.bas \
  EvenTmp_PBC-SPLIT.bas \
  EvenTmp_PBC.bas \
  Ghost-SPLIT.bas \
  Ghost.bas \
  LANL2_DZ_ECP-SPLIT.bas \
  LANL2_DZ_ECP.bas \
  MIDI-SPLIT.bas \
  MIDI.bas \
  MINI-SPLIT.bas \
  MINI.bas \
  MgO_C98-SPLIT.bas \
  MgO_C98.bas \
  README \
  SBKJC_VDZ_ECP-SPLIT.bas \
  SBKJC_VDZ_ECP.bas \
  STO-2G-SPLIT.bas \
  STO-2G.bas \
  STO-2G.bas-SPLIT \
  STO-3G-SPLIT.bas \
  STO-3G.bas \
  STO-3G.bas-SPLIT \
  STO-6G-SPLIT.bas \
  STO-6G.bas \
  SrTiOAllE-SPLIT.bas \
  SrTiOAllE.bas \
  Stuttgart_RLC_ECP-SPLIT.bas \
  Stuttgart_RLC_ECP.bas \
  Stuttgart_RSC97_ECP-SPLIT.bas \
  Stuttgart_RSC97_ECP.bas \
  TiO2_C98-SPLIT.bas \
  TiO2_C98.bas \
  User1.bas \
  User2.bas \
  User4.bas \
  User5.bas \
  WTBS-SPLIT.bas \
  WTBS.bas \
  splitbas

CLEANFILES = *~
