add_executable( FreeON
  ConflictDetect.F90
  ControlStructures.F90
  DynamicsKeys.F90
  FreeON.F90
  GeometryKeys.F90
  GeomOptKeys.F90
  Harmonic.F90
  Hessian.F90
  InCoords.F90
  ls_rmsd.F90
  LennardJones.F90
  Massage.F90
  MDynamics.F90
  MLP.F90
  MonteCarlo.F90
  NEB.F90
  Numerics.F90
  Optimizer.F90
  OptionKeys.F90
  Overlay.F90
  ParallelKeys.F90
  ParseBasis.F90
  ParseCommands.F90
  ParseDynamics.F90
  ParseExtraCoords.F90
  ParseGeometries.F90
  ParseGeomOpt.F90
  ParseInput.F90
  ParseOptions.F90
  ParseParallel.F90
  ParsePeriodic.F90
  ParseProperties.F90
  PeriodicKeys.F90
  PrintParsed.F90
  PunchHDF.F90
  QUICCA.F90
  Response.F90
  RQI.F90
  SCFKeys.F90
  SCFs.F90
  Spawn.c
  ZippyQuote.F90
  )
